fixed spacing

--- a/RCUfrontend/src/app/components/account-settings/account-settings.component.css
+++ b/RCUfrontend/src/app/components/account-settings/account-settings.component.css
@@ -1,7 +1,3 @@
-.container{
-   /* padding-top: 5%;*/
-}
-
 h2.title{
     position: relative;
     text-align: center;
@@ -11,7 +7,7 @@ h2.title{
     background-color: var(--white);
     font-family: "Futura";
     padding: 20px 25px 30px;
-    margin: 0 auto 25px;
+    /* margin: 0 auto 25px; */
     /*margin-top: 50px;*/
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
