--- a/RCUfrontend/src/app/components/user-profile/user-profile.component.css
+++ b/RCUfrontend/src/app/components/user-profile/user-profile.component.css
@@ -53,7 +53,7 @@ input.inputs{
 
 .editbtn:hover{
     background-color: var(--orange);
-    color: white;
+    color: black;
 }
 
 .editbtn span::after{
@@ -79,7 +79,7 @@ input.inputs{
     background-color: var(--white);
     font-family: "Futura";
     padding: 20px 25px 30px;
-    margin: 0 auto 25px;
+    /* margin: 0 auto 2px; */
     margin-top: 50px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
