--- a/RCUfrontend/src/app/security-profile/security-profile.component.css
+++ b/RCUfrontend/src/app/security-profile/security-profile.component.css
@@ -79,7 +79,7 @@ right: -5px;
   background-color: var(--white);
   font-family: "Futura";
   padding: 20px 25px 30px;
-  margin: 0 auto 25px;
+  /* margin: 0 auto 25px; */
   margin-top: 50px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
